Tests/Theorems.lean
import Quotify.Command

/--
error: Theorems marked with `[quotify]` must have one of the following forms:

вАҐ `вИА вА¶, вИА a b, (a вЙИ b) вЖТ f a = f b`
вАҐ `вИА вА¶, вИА aвВБ bвВБ aвВВ bвВВ, (aвВБ вЙИ aвВВ) вЖТ (bвВБ вЙИ bвВВ) вЖТ f aвВБ bвВБ = f aвВВ bвВВ`
вАҐ `вИА вА¶, вИА a b, (a вЙИ b) вЖТ f a вЙИ f b`
вАҐ `вИА вА¶, вИА aвВБ aвВВ, (aвВБ вЙИ aвВВ) вЖТ вИА bвВБ bвВВ, (bвВБ вЙИ bвВВ) вЖТ f aвВБ bвВБ вЙИ f aвВВ bвВВ`

The given theorem does not match any of these.
-/
#guard_msgs(error) in
@[quotify]
theorem tвВБ (lвВБ lвВВ : List ќ±) : lвВБ вЙИ lвВВ := sorry

@[quotify]
theorem tвВВ (lвВБ lвВВ : List ќ±) (h : lвВБ вЙИ lвВВ) : lвВБ.reverse вЙИ lвВВ.reverse := sorry

@[quotify]
theorem tвВГ (lвВБ lвВВ : List ќ±) (h : (List.isSetoid _).r lвВБ lвВВ) : lвВБ.reverse вЙИ lвВВ.reverse := sorry

/-- info:
вАҐ map: [tвВВ, tвВГ]
-/
#guard_msgs in
#quotify_theorems List.Perm

namespace X

opaque tвВВ : Nat

/-- info:
вАҐ map: [_root_.tвВВ, tвВГ]
-/
#guard_msgs in
#quotify_theorems List.Perm

end X

/-- info:
вАҐ map: [tвВВ, tвВГ]
-/
#guard_msgs in
#quotify_theorems @List.Perm Nat

@[quotify]
theorem tвВД (lвВБ lвВВ : List Nat) (h : lвВБ вЙИ lвВВ) : lвВБ.reverse вЙИ lвВВ.reverse := sorry

/-- info:
вАҐ map: [tвВВ, tвВГ]
-/
#guard_msgs in
#quotify_theorems List.Perm

/-- info:
вАҐ map: [tвВВ, tвВГ, tвВД]
-/
#guard_msgs in
#quotify_theorems @List.Perm Nat

/--
info:
fun ќ± => @List.Perm ќ±:
  вАҐ map: [tвВВ, tвВГ]
  вПО
@List.Perm Nat:
  вАҐ map: [tвВД]
-/
#guard_msgs in
set_option pp.explicit true in
#quotify_theorems

@[quotify]
theorem tвВЕ (lвВБ lвВВ : List ќ±) (hвВБ : lвВБ вЙИ lвВВ) (rвВБ rвВВ : List ќ±) (hвВВ : rвВБ вЙИ rвВВ) : lвВБ ++ rвВБ вЙИ lвВВ ++ rвВВ := sorry

/--
info:
вАҐ map: [tвВВ, tвВГ]
вАҐ mapвВВ: [tвВЕ]
-/
#guard_msgs in
#quotify_theorems List.Perm

@[quotify]
theorem tвВЖ (lвВБ lвВВ : List ќ±) (h : lвВБ вЙИ lвВВ) : lвВБ.reverse = lвВВ.reverse := sorry

/--
info:
вАҐ lift: [tвВЖ]
вАҐ map: [tвВВ, tвВГ]
вАҐ mapвВВ: [tвВЕ]
-/
#guard_msgs in
#quotify_theorems List.Perm

@[quotify]
theorem tвВЗ (lвВБ lвВВ rвВБ rвВВ : List ќ±) (hвВБ : lвВБ вЙИ lвВВ) (hвВВ : rвВБ вЙИ rвВВ) : lвВБ ++ rвВБ = lвВВ ++ rвВВ := sorry

/--
info:
вАҐ lift: [tвВЖ]
вАҐ liftвВВ: [tвВЗ]
вАҐ map: [tвВВ, tвВГ]
вАҐ mapвВВ: [tвВЕ]
-/
#guard_msgs in
#quotify_theorems List.Perm

-- **TODO** Add some flexibility to the order in which arguments of `quotify` theorems can be given.
@[quotify]
theorem tвВБвВАвВА (lвВБ lвВВ rвВБ rвВВ : List ќ±) (hвВБ : lвВБ вЙИ lвВВ) (hвВВ : rвВБ вЙИ rвВВ) : lвВБ ++ rвВБ вЙИ lвВВ ++ rвВВ := sorry

instance : HasEquiv Nat where
  Equiv := (¬Ј = ¬Ј)

-- **TODO** We do not support different equivalence relations, even though `Quotient.map` could.
@[quotify]
theorem tвВБвВАвВБ (lвВБ lвВВ : List ќ±) (h : lвВБ вЙИ lвВВ) : lвВБ.length вЙИ lвВВ.length := sorry
